--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="home-img">
                         <div class="img-box">
-                            <img src="pic/flower.png" alt="profile-img">
+                            <img src="f1.png" alt="profile-img">
                         </div>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
             <div class="row">
                 <div class="about-img">
                     <div class="img-box">
-                        <img src="pic/f1.png" alt="about-img">
+                        <img src="f1.png" alt="about-img">
                     </div>
                 </div>
 
@@ -199,7 +199,7 @@
                     <!--Portolio Item Start-->
                     <div class="portfolio-item">
                         <div class="portfolio-item-thumbnail">
-                            <img src="pic/p2.png" alt="portfolio item thumb">
+                            <img src="p2.png" alt="portfolio item thumb">
                         </div>
                         <h3 class="portfolio-item-title">Calculator</h3>
                         <button type="button" class="btn view-project-btn">View Project</button>
@@ -225,7 +225,7 @@
                     <!--Portolio Item Start-->
                     <div class="portfolio-item">
                         <div class="portfolio-item-thumbnail">
-                            <img src="pic/p2.png" alt="portfolio item thumb">
+                            <img src="p2.png" alt="portfolio item thumb">
                         </div>
                         <h3 class="portfolio-item-title">Calculator</h3>
                         <button type="button" class="btn view-project-btn">View Project</button>
@@ -251,7 +251,7 @@
                     <!--Portolio Item Start-->
                     <div class="portfolio-item">
                         <div class="portfolio-item-thumbnail">
-                            <img src="pic/p2.png" alt="portfolio item thumb">
+                            <img src="p2.png" alt="portfolio item thumb">
                         </div>
                         <h3 class="portfolio-item-title">Calculator</h3>
                         <button type="button" class="btn view-project-btn">View Project</button>
@@ -277,7 +277,7 @@
                     <!--Portolio Item Start-->
                     <div class="portfolio-item">
                         <div class="portfolio-item-thumbnail">
-                            <img src="pic/p2.png" alt="portfolio item thumb">
+                            <img src="p2.png" alt="portfolio item thumb">
                         </div>
                         <h3 class="portfolio-item-title">Calculator</h3>
                         <button type="button" class="btn view-project-btn">View Project</button>
@@ -303,7 +303,7 @@
                     <!--Portolio Item Start-->
                     <div class="portfolio-item">
                         <div class="portfolio-item-thumbnail">
-                            <img src="pic/p2.png" alt="portfolio item thumb">
+                            <img src="p2.png" alt="portfolio item thumb">
                         </div>
                         <h3 class="portfolio-item-title">Calculator</h3>
                         <button type="button" class="btn view-project-btn">View Project</button>
@@ -329,7 +329,7 @@
                     <!--Portolio Item Start-->
                     <div class="portfolio-item">
                         <div class="portfolio-item-thumbnail">
-                            <img src="pic/p2.png" alt="portfolio item thumb">
+                            <img src="p2.png" alt="portfolio item thumb">
                         </div>
                         <h3 class="portfolio-item-title">Calculator</h3>
                         <button type="button" class="btn view-project-btn">View Project</button>
@@ -424,7 +424,7 @@
                 <div class="pp-header">
                     <button type="button" class="btn pp-close">close</button>
                     <div class="pp-thumbnail">
-                        <img src="pic/p3.png" alt="pp-thumbnail">
+                        <img src="p3.png" alt="pp-thumbnail">
                     </div>
                     <h3></h3>
                 </div>
