--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <!-- Home Section End -->
 
         <!--About Section Start-->
-        <section class="about-section sec-padding " id="about">
+        <section class="about-section sec-padding active" id="about">
             <div class="container">
                 <div class="row">
                     <div class="section-title">
