--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
                 <div class="about-text">
                     <p>
-                        An account of Lehi and his wife Sariah, and his four sons, being called,
+                        Eager user experience designer and web designer. with a background in graphic design and enthusiasm. Looking for a role in web design to utilize my UI/UX skills. Languages focus on <br> HTML, CSS, and JavaScript.
                     </p>
                     <h3>
                         skills
